[feat] problem solved